fix overflow finally

--- a/scss/stylesheets/articles/show.scss
+++ b/scss/stylesheets/articles/show.scss
@@ -54,6 +54,6 @@
   
   .result {
     max-height: 150px;
-    overflow:   scroll;
+    overflow-y: scroll;
   }
 }
